add array with name, seat, name table

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     
 
-    <script src="js/script.js"></script>
+    <script src="js/snacktable.js"></script>
+    <!--<script src="js/snackstudents.js"></script>-->
+
 </body>
 </html>
