add array of objects

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
     
 
-    <script src="js/snacktable.js"></script>
-    <!--<script src="js/snackstudents.js"></script>-->
+    <script src="js/snackstudents.js"></script>
+    <!--<script src="js/snackstable.js"></script>-->
 
 </body>
 </html>
