add lightest bike with map and math

--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
 </head>
 <body>
     
+    <!--<script src="js/football.js"></script>-->
+    <script src="js/bikes.js"></script>
 
-    <script src="js/snackstudents.js"></script>
+
+    <!--<script src="js/snackstudents.js"></script>-->
     <!--<script src="js/snackstable.js"></script>-->
 
 </body>
